# scanner_evaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt  scanners.py
analysis/: all_evals_overview.ipynb  scan_utils.py  swe_bench_synth.ipynb  validation_summary.ipynb
eval_grading/: scanners.py  scout_template.yaml
eval_grading/core_bench/: core_bench_run.py  core_bench_run_synth.py  scan_results_analysis.ipynb  scout.yaml
eval_grading/core_bench/validation/: core_bench_easy_oh1_JM.csv
eval_grading/mle_bench/: mle_bench_run.py  scout.yaml
eval_grading/mlrc_bench/: mlrc_bench_run.py  scout.yaml
eval_grading/swe_bench/: scout.yaml  swe_bench_run.py  swe_bench_run_synth.py
eval_grading/terminal-bench-2.0/: scout.yaml
evals/: .gitattributes  explain_eval_transcript.py  hf_data_code.ipynb  hf_dataset_sync.py  scanners.py  scout.yaml  scout_template.yaml
evals/GAIA/: GAIA_run.py
evals/core_bench/: comparison.ipynb  core_bench_run.py  scan_results_analysis.ipynb  validation_summary.ipynb
evals/core_bench/validation/: comparison.ipynb  core_bench_easy_ans_form_multi.csv  core_bench_easy_cheating.csv  (+9 more)
sample_size/: sample_calc_1.ipynb  sample_calc_2.ipynb  sample_calc_3.ipynb  sample_one_sided.ipynb
scanner_pilot/: hf_data_code.ipynb  inspect_script.py  inspect_workbook.ipynb  question_generation.ipynb  scout_pilot.py
scanner_pilot/data/: example_impossible.json  example_questions.json  impossible-tasks_async_10batches_qc.json  impossible-tasks_async_10batches_qs.json
tools/: hf_dataset.py  pull_hf_dataset.py  push_hf_dataset.py
(+10 files in other folders)
