[tool.poetry]
name = "scanner_evaluation"
version = "0.1.0"
description = ""
authors = ["Jeff Mohl <jefftmohl@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.3"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
anthropic = "^0.71.0"
nest-asyncio = "^1.6.0"
scipy = "^1.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

