[tool.poetry]
name = "scanner_evaluation"
version = "0.1.0"
description = ""
authors = ["Jeff Mohl <jefftmohl@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.3"
numpy = "^2.3.0"
openai = "^2.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
anthropic = "^0.71.0"
nest-asyncio = "^1.6.0"
scipy = "^1.17.0"
inspect-ai = "^0.3.179"
plotly = "^6.5.2"
instructor = "^1.14.5"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

